--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
+
 {
+  
   "name": "new",
   "homepage": "http://Amanayalattas.com",
   "version": "0.1.0",
@@ -17,9 +19,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "node --version",
+    "test": "echo \"Error: no test specified\" && exit 1"
+
   },
+
+  "devDependencies": {},
   "eslintConfig": {
     "extends": [
       "react-app",
