--- a/package.json
+++ b/package.json
@@ -1,47 +1,124 @@
-
 {
   
   "name": "new",
-  "homepage": "http://Amanayalattas.com",
+  
+  "homepage": "http://amanyats.github.io/Amany-s_-Portfolio",
+  
   "version": "0.1.0",
+  
   "private": true,
+  
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "emailjs-com": "^3.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+  
+    
+  "@testing-library/jest-dom": "^5.11.4",
+  
+    
+  "@testing-library/react": "^11.1.0",
+  
+    
+  "@testing-library/user-event": "^12.1.10",
+  
+    
+  "emailjs-com": "^3.2.0",
+  
+    
+  "react": "^17.0.2",
+  
+    
+  "react-dom": "^17.0.2",
+  
+    
+  "react-icons": "^4.3.1",
+  
+    
+  "react-scripts": "4.0.3",
+  
+    
+  "web-vitals": "^1.0.1"
+  
   },
+  
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "deploy": "node --version",
-    "test": "echo \"Error: no test specified\" && exit 1"
-
+  
+    
+  "start": "react-scripts start",
+  
+    
+  "build": "react-scripts build",
+  
+    
+  "eject": "react-scripts eject",
+  "predeploy":"npm run build",
+  "deploy":"gh-pages -d build"
+  
+    
+ 
+  
   },
-
-  "devDependencies": {},
+  
+  "devDependencies": {
+  
+    
+  "gh-pages": "^3.2.3"
+  
+  },
+  
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  
+    
+  "extends": [
+  
+    
+    
+  "react-app",
+  
+    
+    
+  "react-app/jest"
+  
+    
+  ]
+  
   },
+  
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  
+    
+  "production": [
+  
+    
+    
+  ">0.2%",
+  
+    
+    
+  "not dead",
+  
+    
+    
+  "not op_mini all"
+  
+    
+  ],
+  
+    
+  "development": [
+  
+    
+    
+  "last 1 chrome version",
+  
+    
+    
+  "last 1 firefox version",
+  
+    
+    
+  "last 1 safari version"
+  
+    
+  ]
+  
   }
 }
